--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "glob": "^11.0.3",
     "minimist": "^1.2.8",
     "node-fetch": "^3.3.2",
+    "open": "^11.0.0",
     "semver": "^7.7.3",
     "tar": "^7.5.2",
     "winston": "^3.19.0"
